# ibus-anthy

./: .travis.yml  Makefile.am  README  autogen.sh  configure.ac  ibus-anthy.spec.in
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml
data/: Makefile.am  anthy.appdata.xml.in  emoji-each.t  emoji-emoji.t  emoji.t  era.t  ibus-anthy.appdata.xml.in  oldchar.t  org.freedesktop.ibus.engine.anthy.gschema.xml.in  symbol.t  zipcode-textdic.py
engine/: Makefile.am  _config.py.in  anthy.i  anthy.xml.in.in  default.xml.in.in  engine.py  engine.py.orig  factory.py  ibus-engine-anthy.in  jastring.py  kana.py  main.py  romaji.py  segment.py  tables.py  thumb.py
engine/python2/: Makefile.am  _config.py.in  anthy.inputMethod.xml.in.in  anthy.xml.in.in  default.inputMethod.xml.in.in  engine.py  factory.py  ibus-engine-anthy.in  jastring.py  kana.py  main.py  romaji.py  segment.py  thumb.py
engine/python3/: Makefile.am  _config.py.in  anthy.xml.in.in  default.xml.in.in  engine.py  factory.py  ibus-engine-anthy.in  jastring.py  kana.py  main.py  romaji.py  thumb.py
gir/: Makefile.am  anthygcontext.c  anthygcontext.h  test.c  test.py
icons/: Makefile.am
m4/: Makefile.am
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ca.po  cs.po  de.po  el.po  es.po  fi.po  fr.po  hu.po  ibus-anthy.pot  ja.po  ka.po  ko.po  pt_BR.po  pt_PT.po  si.po  sv.po  tr.po  uk.po  zh_CN.po
setup/: Makefile.am  _config.py.in  anthyprefs.py.in  ibus-setup-anthy.desktop.in.in  ibus-setup-anthy.in  main.py  prefs.py  setup.ui
setup/python2/: Makefile.am  _config.py.in  anthyprefs.py  anthyprefs.py.in  ibus-setup-anthy.in  main.py  prefs.py  setup.ui
setup/python3/: Makefile.am  _config.py.in  anthyprefs.py  anthyprefs.py.in  ibus-setup-anthy.desktop.in.in  ibus-setup-anthy.in  main.py  prefs.py  setup.ui
tests/: Makefile.am  anthycases.py  anthytest.py  test-build.sh  test-console.sh
